RESOLVED FIXED114086
[EFL] --minimal build fails with error: ‘UINT_MAX’ was not declared in this scope
https://bugs.webkit.org/show_bug.cgi?id=114086
Summary [EFL] --minimal build fails with error: ‘UINT_MAX’ was not declared in this s...
Ed Bartosh
Reported 2013-04-06 06:21:23 PDT
build-webkit --efl --cmakeargs='-DSHARED_CORE=ON' --release fails with this error: /home/ed/git/wk/WebKit/Tools/DumpRenderTree/AccessibilityUIElement.cpp: In function ‘const OpaqueJSValue* boundsForRangeCallback(JSContextRef, JSObjectRef, JSObjectRef, size_t, const OpaqueJSValue* const*, const OpaqueJSValue**)’: /home/ed/git/wk/WebKit/Tools/DumpRenderTree/AccessibilityUIElement.cpp:144:25: error: ‘UINT_MAX’ was not declared in this scope /home/ed/git/wk/WebKit/Tools/DumpRenderTree/AccessibilityUIElement.cpp: In function ‘const OpaqueJSValue* stringForRangeCallback(JSContextRef, JSObjectRef, JSObjectRef, size_t, const OpaqueJSValue* const*, const OpaqueJSValue**)’: /home/ed/git/wk/WebKit/Tools/DumpRenderTree/AccessibilityUIElement.cpp:168:25: error: ‘UINT_MAX’ was not declared in this scope /home/ed/git/wk/WebKit/Tools/DumpRenderTree/AccessibilityUIElement.cpp: In function ‘const OpaqueJSValue* attributedStringForRangeCallback(JSContextRef, JSObjectRef, JSObjectRef, size_t, const OpaqueJSValue* const*, const OpaqueJSValue**)’: /home/ed/git/wk/WebKit/Tools/DumpRenderTree/AccessibilityUIElement.cpp:180:25: error: ‘UINT_MAX’ was not declared in this scope /home/ed/git/wk/WebKit/Tools/DumpRenderTree/AccessibilityUIElement.cpp: In function ‘const OpaqueJSValue* attributedStringRangeIsMisspelledCallback(JSContextRef, JSObjectRef, JSObjectRef, size_t, const OpaqueJSValue* const*, const OpaqueJSValue**)’: /home/ed/git/wk/WebKit/Tools/DumpRenderTree/AccessibilityUIElement.cpp:192:25: error: ‘UINT_MAX’ was not declared in this scope /home/ed/git/wk/WebKit/Tools/DumpRenderTree/AccessibilityUIElement.cpp: In function ‘const OpaqueJSValue* setSelectedTextRangeCallback(JSContextRef, JSObjectRef, JSObjectRef, size_t, const OpaqueJSValue* const*, const OpaqueJSValue**)’: /home/ed/git/wk/WebKit/Tools/DumpRenderTree/AccessibilityUIElement.cpp:507:25: error: ‘UINT_MAX’ was not declared in this scope make[2]: *** [Tools/DumpRenderTree/efl/CMakeFiles/DumpRenderTree.dir/__/AccessibilityUIElement.cpp.o] Error 1 make[1]: *** [Tools/DumpRenderTree/efl/CMakeFiles/DumpRenderTree.dir/all] Error 2
Attachments
Patch (1.11 KB, patch)
2013-04-06 06:30 PDT, Ed Bartosh
ggaren: review+
Patch (1.15 KB, patch)
2013-04-06 10:59 PDT, Ed Bartosh
no flags
Ed Bartosh
Comment 1 2013-04-06 06:30:11 PDT
Geoffrey Garen
Comment 2 2013-04-06 10:24:35 PDT
Comment on attachment 196732 [details] Patch r=me
Geoffrey Garen
Comment 3 2013-04-06 10:25:06 PDT
Comment on attachment 196732 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=196732&action=review > Tools/ChangeLog:3 > + [EFL] build fails with error: âUINT_MAXâ was not declared in this scope There seems to be a character encoding issue in your ChangeLog. Please fix before landing.
Ed Bartosh
Comment 4 2013-04-06 10:59:19 PDT
Created attachment 196745 [details] Patch Fixed. Please review.
WebKit Commit Bot
Comment 5 2013-04-06 14:20:00 PDT
Comment on attachment 196745 [details] Patch Clearing flags on attachment: 196745 Committed r147854: <http://trac.webkit.org/changeset/147854>
WebKit Commit Bot
Comment 6 2013-04-06 14:20:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.