[EFL] build fails with error: 'UINT_MAX' was not declared in this scope https://bugs.webkit.org/show_bug.cgi?id=114086

Patch by Ed Bartosh <bartosh@gmail.com> on 2013-04-06
Reviewed by Tim Horton.

* DumpRenderTree/AccessibilityUIElement.cpp: Included limits.h

Canonical link: https://commits.webkit.org/132483@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147854 268f45cc-cd09-0410-ab3c-d52691b4dbfc